--- a/public/log-in.html
+++ b/public/log-in.html
@@ -14,12 +14,12 @@
     <div class="log-in">
     <span class="log-in-title">Log in</span>
     <a class="sign-up-link" href="sign-up.html" target="_blank">Not a member?</a>
-   <form class="log-in-form" action="http://localhost:3000/api/users/login" method="POST" id="form">
+   <form class="log-in-form" id="form">
         <input class="log-in-form_email" type="email" name="user-email" id="email" placeholder="Email...">
         <input class="log-in-form_pass" type="password" name="user-password" id="password" placeholder="Password..."> 
-        <button class="submit-btn" type="submit">Log in</button>
+        <button class="submit-btn" type="submit" id="submit">Log in</button>
     </form>
-   <!--  <span class="warning">Oops, looks like your email or password is incorrect.<br>Please try again</span> -->
+   <span class="log-warning" id="warning">Oops, looks like your email or password is incorrect.<br>Please try again</span>
     <a class="remember" href="repass.html" target="_blank">Forgot password?</a>
     </div>
     </div>
